[project]
name = "lk-print-box"
version = "2.0.0"
description = "链科云打印盒 CLI - 让 AI 驱动打印和扫描"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
]

[project.scripts]
lk-print = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lianke_printing"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple"
default = true
